Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9823

NTVDM with STANDALONE defined fails to compile

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • None
    • None
    • VMware Player 6.0.5 and ReactOS Revision 68159

    Description

      When compiling with the STANDALONE set in ntvdm.h there is an error in dem.c in line 508 regarding an incorrect number of parameters. A patch is attached that seems to allow the compile to finish, but I am not sure that it is correct.

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              DougLyons DougLyons
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: