[NTVDM]: Fix compilation in STANDALONE mode. CORE-9823 #resolve #comment Fixed in r68396!

svn path=/trunk/; revision=68396